--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.8",
+    "socket.io": "^4.5.4",
     "validator": "^13.7.0"
   }
 }
