--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.31.0",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
@@ -31,6 +32,7 @@
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.8",
+    "razorpay": "^2.8.4",
     "socket.io": "^4.5.4",
     "validator": "^13.7.0"
   }
